Update javajdguide.md