@@ -302,9 +302,42 @@ String str = "Hello, world!";
 ![image](https://user-images.githubusercontent.com/69948118/236414915-80f23a38-90fa-481e-bdf7-ed4d696c1149.png)
 
 ---
-## Common Java Mistakes
+## Common Java Mistakes and Learning
 #### Remove Object from Collection
 - Use Iterator for removing object from collection in loop 
 #### Don't use wrapper classes in loop instead use primitive Long -> long
+
 ### Spring Boot Mistakes 
 #### Leaking iternals 
+---
+## Java Coding Tips and Tricks
+- Use efficient data structures: Use the appropriate data structure for your use case. For example, use a HashSet instead of a List when you need to check for the presence of an element.
+- Avoid creating unnecessary objects: Creating objects can be expensive, especially if you’re creating a large number of them in a short period of time. Try to reuse existing objects instead of creating new ones.
+- Use StringBuilder instead of String concatenation: String concatenation creates a new String object every time, which can be inefficient. Instead, use StringBuilder to concatenate Strings.
+- Avoid excessive method calls: Method calls can be expensive, especially if they’re inside a loop. Try to minimize the number of method calls you make.
+- Minimize object copying: Copying objects can be expensive, especially if the objects are large. Try to minimize the number of times you copy objects.
+- Use the right algorithms: Use the appropriate algorithm for your use case. For example, if you need to sort a large array, use a quicksort algorithm instead of a bubble sort algorithm.
+- Use primitive types instead of wrapper classes: Primitive types are faster and use less memory than wrapper classes.
+- Avoid unnecessary calculations: Try to eliminate unnecessary calculations from your code. For example, if you’re calculating the same value multiple times, calculate it once and store the result in a variable.
+- Use efficient I/O operations: I/O operations can be slow, especially if they involve disk access. Use efficient I/O operations, such as buffered I/O, to minimize the time spent on I/O.
+- Profile your code: Use a profiler to identify the parts of your code that are taking the most time. This can help you focus your optimization efforts where they’ll have the biggest impact.
+- Avoid unnecessary synchronization: Synchronization can be expensive, especially if it’s not needed. Only synchronize when necessary, and try to use more fine-grained locking when possible.
+- Minimize exceptions: Exceptions are expensive, both in terms of performance and memory usage. Try to minimize the number of exceptions thrown, and avoid using exceptions for control flow.
+- Use lazy initialization: If you have expensive objects that aren’t always needed, use lazy initialization to defer their creation until they’re actually needed.
+- Use caching: If you have expensive operations that are performed frequently, consider caching the results to avoid unnecessary computations.
+- Avoid excessive memory usage: Java applications can quickly consume large amounts of memory if you’re not careful. Be mindful of how much memory your application is using, and avoid unnecessary object creation.
+- Use the right collection type: Choose the appropriate collection type for your use case. For example, if you’re frequently inserting and removing elements, use a LinkedList instead of an ArrayList.
+- Use final variables: Using final variables can improve performance by allowing the compiler to optimize the code.
+- Avoid unnecessary class loading: Class loading can be expensive, especially if it’s done frequently. Try to load classes only when they’re needed, and avoid unnecessary class loading.
+- Optimize loops: Loops can be a major performance bottleneck in Java code. Make sure that your loops are as efficient as possible, and avoid unnecessary iterations.
+- Use primitive arrays instead of collections: Primitive arrays are faster and use less memory than collections of objects. If you’re dealing with a large amount of data, consider using primitive arrays instead of collections.
+- Minimize object initialization: Object initialization can be expensive, especially if it involves complex constructors. Try to minimize object initialization, and consider using object pooling to reuse existing objects.
+- Use JIT optimization: The Java Virtual Machine (JVM) includes a Just-In-Time (JIT) compiler that can optimize your code at runtime. Make sure that JIT optimization is enabled, and consider using the -XX:+AggressiveOpts option to enable more aggressive optimization.
+- Use parallelism: If your application can benefit from parallelism, consider using Java’s concurrency features to take advantage of multiple cores or processors.
+- Use the right data structure for searching and sorting: The choice of data structure can have a big impact on the performance of searching and sorting operations. Use a data structure that’s optimized for the type of search or sort you’re performing.
+- Minimize memory leaks: Memory leaks can be a major performance problem in Java applications. Make sure that your code doesn’t create unnecessary object references that prevent objects from being garbage collected.
+- Use the right logging level: Logging can be expensive, especially if you’re logging at a high level. Use the appropriate logging level for your use case, and consider disabling logging in production environments.
+- Avoid unnecessary string manipulation: String manipulation can be expensive, especially if it involves regular expressions or other complex operations. Try to minimize string manipulation, and consider using StringBuilder or StringBuffer for string concatenation.
+- Use efficient network communication: Network communication can be a major bottleneck in Java applications. Use efficient protocols and data formats, and consider using compression or caching to reduce the amount of data that needs to be transmitted.
+- Use modern Java features: Finally, remember that Java is a constantly evolving language, and new features are added with each release. Make sure that you’re using the latest Java version, and take advantage of new features like lambdas, streams, and modules to write more efficient code.
+
